<resources>
    <string name="app_name">ReHabit</string>
    <string name="login">로그인</string>
    <string name="nav_home">홈</string>
    <string name="nav_menu1">도전과제</string>
    <string name="nav_menu2">기록</string>
    <string name="nav_settings">설정</string>
    <string name="call_nickname"><b>%1$s</b> 님</string>
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="challenge">챌린지</string>
    <string name="back">이전</string>
    <string name="title">제목</string>
    <string name="diary">소감</string>
    <string name="message">메시지</string>
    <string name="call">전화</string>
    <string name="share">share</string>
    <string name="character">캐릭터</string>
    <string name="answer_yes">네</string>
    <string name="answer_no">아니오</string>
    <string name="answer_ok">확인</string>
    <string name="answer_progress">진행</string>
    <string name="answer_enter">입력</string>
    <string name="answer_cancel">취소</string>
    <string name="NotMemberYet">아직 회원이 아니신가요?</string>
    <string name="SignUp">회원가입</string>
    <string name="login_fail_email">존재하지 않는 이메일입니다.\n회원가입을 먼저 진행해주세요</string>
    <string name="login_fail_password">비밀번호가 맞지 않습니다. 다시 시도해주세요.</string>
    <string name="login_success">로그인 성공</string>
    <string name="Welcome">님 환영합니다!</string>
    <string name="tip">Tip!</string>
    <string name="leftNumber">다음 단계까지 남은 횟수</string>
    <string name="checkPassword">비밀번호 확인</string>
    <string name="doubleCheck">중복 확인</string>
    <string name="register">회원가입하기</string>
    <string name="menu1_todo">Challenge</string>
    <string name="menu1_comp">Completed</string>
    <string name="todo">할 일</string>
    <string name="menu1_add">오늘의 할일을 추가해보세요!🔥👉</string>
    <string name="menu1_todo_message">할 일을 작성해 주세요.</string>
    <string name="shareWithFriend">친구에게 공유</string>
    <string name="share_message">[ReHabit]\n환경 보호에 한 발 다가갔습니다. 축하해주세요. </string>
    <string name="congrat">축하합니다!</string>
    <string name="today_edit_todo">환경을 위해 우리가 실천할 수 있는\n다양한 일이 있다는 사실 아셨나요?\n\n환경을 위한 사소한 습관 바꾸기, 어렵지 않아요.\nReHabit과 함께 자신의 행동을 기록하여\n성장해 나아가봅시다.\n\n오늘도 깨끗한 환경에 한 발짝 다가가는 당신,\n아름답습니다.\n\n&lt;오늘 할 일을 추가해주세요.&gt;\n ex. 방을 나갈 때 항상 불을 끄기</string>
    <string name="menu1_add_challenge">%1$s\n새 챌린지를 추가했습니다! 📌</string>
    <string name="menu1_complete_title">Challenge 달성</string>
    <string name="menu1_complete_message">%1$s\n이 challenge를 정말 달성하셨습니까? ✔</string>
    <string name="menu1_challenge_uncomp">달성이 취소되었습니다.\n조금만 더 힘내서 challenge를 달성해보세요! 🙌</string>
    <string name="menu1_challenge_comp">%1$s 성공!🎉\n축하합니다, 기록 메뉴에서 오늘의 소감을 기록해보세요!</string>
    <string name="menu1_challenge_del_title">Challenge 삭제</string>
    <string name="menu1_challenge_del_message">%1$s\nchallenge를 삭제하시겠습니까? 😮</string>
    <string name="menu1_unaccessible">오늘의 챌린지가 아닙니다. 😨</string>
    <string name="menu2_warningText">!WARNING!</string>
    <string name="menu2_title">달성 소감을 기록해보세요! 👉</string>
    <string name="menu2_select_challenge">챌린지를 선택해주세요</string>
    <string name="chooseMission"><u>달성한 챌린지 선택하기</u></string>
    <string name="menu2_no_completed">달성한 챌린지가 없습니다.\n일자를 다시 확인해주세요.\n</string>
    <string name="menu2_detail_title">Detail Page 🧐</string>
    <string name="menu2_prev_diary">지난 기록 확인 🎉</string>
    <string name="menu2_write_selected">달성 챌린지</string>
    <string name="menu2_write_rate">성취도</string>
    <string name="menu2_write_save">저장</string>
    <string name="menu2_write_date">일자</string>
    <string name="delete_complete">삭제했습니다.</string>
    <string name="cancel_message">취소했습니다.</string>
    <string name="settings_acc">계정</string>
    <string name="settings_nickname">닉네임 변경</string>
    <string name="settings_nickname_message">변경할 닉네임을 입력하세요.</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_del_acc">회원 탈퇴</string>
    <string name="settings_sound">배경음악 음량 조절</string>
    <string name="settings_tip">팁 모아보기</string>
    <string name="settings_tip_message">각 항목을 터치하여 친구에게 팁을 공유해보세요!👆</string>
    <string name="tips_share_title">ReHabit과 함께 환경 보호를 실천해보아요!</string>
    <string name="tips_share_message">ReHabit과 함께 환경 보호를 실천해보아요!\n\n%1$s</string>
    <string name="settings_version">버전</string>
    <string name="settings_contact">Contact</string>
    <string name="settings_contact_title">[오류보고/문의]</string>
    <string name="settings_contact_message">어플에 대한 의견을 알려주세요.</string>
    <string name="settings_about_us">About Us</string>
    <string name="about_us_message">ReHabit\n\nSWU GURU2 Android\nTeam 5\n김한선 이정은 최유선 허선정\n\n자료 출처\n🌏 그린피스\nhttps://www.greenpeace.org/korea/\n🛤 환경부\nhttp://me.go.kr/home/web/main.do</string>
    <string name="settings_logout_dialog">로그아웃 하시겠습니까?</string>
    <string name="settings_del_dialog">회원탈퇴 진행 시 지금까지의 모든 기록이 삭제됩니다.\n계속 진행할까요?</string>
    <string name="settings_del_progess">회원탈퇴 진행을 위해 비밀번호를 입력해주세요.</string>
    <string name="setting_version_message">최신 버전입니다. 현재 버전 1.0</string>
    <string name="password_fail">비밀번호가 올바르지 않습니다.</string>
    <string name="del_comp">회원탈퇴가 완료되었습니다.\n이용해주셔서 감사합니다.</string>
</resources>